# semver-diff

./: .all-contributorsrc  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
src/: lib.rs
tests/: integration.rs
