[package]
name = "semver-diff"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Find the release-type difference between two semantic versions (major/minor/patch and their prerelease variants). A faithful Rust port of node-semver's diff."
documentation = "https://docs.rs/semver-diff"
repository = "https://github.com/trananhtung/semver-diff"
homepage = "https://github.com/trananhtung/semver-diff"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["semver", "version", "diff", "release", "update"]
categories = ["development-tools", "parsing"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
semver = "1"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
